@@ -117,6 +117,47 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
    </item>
    <item row="1" column="0">
     <layout class="QGridLayout" name="gridLayout">
+     <item row="1" column="4">
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>13</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="2">
+      <widget class="QToolButton" name="up">
+       <property name="toolTip">
+        <string>Move the selected image up</string>
+       </property>
+       <property name="text">
+        <string>up</string>
+       </property>
+       <property name="icon">
+        <iconset resource="icons/icons.qrc">
+         <normaloff>:/icons/tango-icon-theme/go-up.svg</normaloff>:/icons/tango-icon-theme/go-up.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QToolButton" name="addEmpty">
+       <property name="toolTip">
+        <string>Add an empty image to the left</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="icons/icons.qrc">
+         <normaloff>:/icons/tango-icon-theme/document-new.svg</normaloff>:/icons/tango-icon-theme/document-new.svg</iconset>
+       </property>
+      </widget>
+     </item>
      <item row="1" column="0">
       <widget class="QToolButton" name="remove">
        <property name="toolTip">
@@ -145,33 +186,6 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
        </property>
       </widget>
      </item>
-     <item row="0" column="2">
-      <widget class="QToolButton" name="up">
-       <property name="toolTip">
-        <string>Move the selected image up</string>
-       </property>
-       <property name="text">
-        <string>up</string>
-       </property>
-       <property name="icon">
-        <iconset resource="icons/icons.qrc">
-         <normaloff>:/icons/tango-icon-theme/go-up.svg</normaloff>:/icons/tango-icon-theme/go-up.svg</iconset>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="3">
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>13</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
      <item row="0" column="0">
       <widget class="QToolButton" name="add">
        <property name="toolTip">
@@ -186,17 +200,31 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QToolButton" name="addEmpty">
+     <item row="0" column="3">
+      <widget class="QToolButton" name="moveLeft">
        <property name="toolTip">
-        <string>Add an empty image to the left</string>
+        <string>Move the selected image up</string>
        </property>
        <property name="text">
-        <string/>
+        <string>move left</string>
        </property>
        <property name="icon">
         <iconset resource="icons/icons.qrc">
-         <normaloff>:/icons/tango-icon-theme/document-new.svg</normaloff>:/icons/tango-icon-theme/document-new.svg</iconset>
+         <normaloff>:/icons/tango-icon-theme/go-previous.svg</normaloff>:/icons/tango-icon-theme/go-previous.svg</iconset>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="4">
+      <widget class="QToolButton" name="moveRight">
+       <property name="toolTip">
+        <string>Move the selected image up</string>
+       </property>
+       <property name="text">
+        <string>move right</string>
+       </property>
+       <property name="icon">
+        <iconset resource="icons/icons.qrc">
+         <normaloff>:/icons/tango-icon-theme/go-next.svg</normaloff>:/icons/tango-icon-theme/go-next.svg</iconset>
        </property>
       </widget>
      </item>
@@ -265,8 +293,8 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
    <slot>insertImage()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>32</x>
-     <y>375</y>
+     <x>35</x>
+     <y>427</y>
     </hint>
     <hint type="destinationlabel">
      <x>118</x>
@@ -281,8 +309,8 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
    <slot>removeSelected()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>131</x>
-     <y>375</y>
+     <x>35</x>
+     <y>458</y>
     </hint>
     <hint type="destinationlabel">
      <x>169</x>
@@ -297,8 +325,8 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
    <slot>imageUp()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>112</x>
-     <y>393</y>
+     <x>99</x>
+     <y>427</y>
     </hint>
     <hint type="destinationlabel">
      <x>168</x>
@@ -313,8 +341,8 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
    <slot>imageDown()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>123</x>
-     <y>421</y>
+     <x>99</x>
+     <y>458</y>
     </hint>
     <hint type="destinationlabel">
      <x>148</x>
@@ -329,12 +357,44 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
    <slot>insertEmptyImage()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>17</x>
-     <y>392</y>
+     <x>59</x>
+     <y>427</y>
     </hint>
     <hint type="destinationlabel">
      <x>104</x>
      <y>167</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>moveLeft</sender>
+   <signal>clicked()</signal>
+   <receiver>ImageTableWidget</receiver>
+   <slot>moveImageLeft()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>118</x>
+     <y>415</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>118</x>
+     <y>282</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>moveRight</sender>
+   <signal>clicked()</signal>
+   <receiver>ImageTableWidget</receiver>
+   <slot>moveImageRight()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>150</x>
+     <y>415</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>153</x>
+     <y>335</y>
     </hint>
    </hints>
   </connection>
@@ -345,5 +405,7 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
   <slot>imageDown()</slot>
   <slot>insertImage()</slot>
   <slot>insertEmptyImage()</slot>
+  <slot>moveImageLeft()</slot>
+  <slot>moveImageRight()</slot>
  </slots>
 </ui>
