@@ -49,7 +49,8 @@ User requests:
  - Key shortcuts
  - Redesign of the Scaling Filter Widget
  - New policies for propagating changes. I'm not 100% happy as this is quite
-   complicated. But I have no other Idea for now...
+   complicated. But I have no other Idea for now... Closes #14
+ - Move am image between left and right column. Closes #13
 
 
 20130601; YASW 0.4
